[package]
name = "loo"
version = "0.0.0"
authors = ["Oliver Giersch"]
description = "Fast, concurrent, safe MPMC & MPSC FIFO queue implementation"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/looqueue-rs.git"
keywords = ["fifo", "queue", "concurrency", "mpmc", "mpsc"]
edition = "2018"

[dependencies]
tagptr = "0.2.0"